--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -10,6 +10,7 @@
     margin: 100px 50px;
 }
 .cart-container{
+    /* background-color: #ECEFEE; */
     background-color: rgba(255, 153, 0, 0.3);
     text-align: center;
     padding: 20px;
